--- a/src/style.css
+++ b/src/style.css
@@ -194,6 +194,41 @@ canvas:focus {
   #start:hover { color: #F04F38; font-size: 34pt; }
 }
 
+.score {
+  z-index: 999999;
+  position: fixed;
+  text-align: center;
+  width: 100%;
+  top: 10vh;
+  font-size: 10vh;
+  font-family: 'ArcadeClassic', sans-serif;
+  color: #6db81d;
+  visibility: hidden;
+}
+
+.score-visibility{
+  visibility: hidden;
+}
+
+.score-animation {
+  -webkit-animation: spotlight 1s linear;
+          animation: spotlight 1s linear;
+}
+
+@keyframes spotlight {
+  0%  { font-size: 10vh; 
+        opacity: 1;}
+  99% { font-size: 20vh; 
+        opacity: 0.5;}
+}
+
+@-webkit-keyframes spotlight {
+  0%  { font-size: 10vh; 
+        opacity: 1;}
+  99% { font-size: 20vh; 
+        opacity: 0.2;}
+}
+
 
 
 
